Grammar/Ast(Re-Fixed)/y.output
State 120 conflicts: 1 reduce/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: Statement END_OF_FILE

    2 Statement: SimpleStatement Statement
    3          | CompoundStatement Statement
    4          | %empty

    5 SimpleStatement: SmallStatement NL

    6 SmallStatement: Expression
    7               | FlowSt
    8               | display

    9 Expression: AssignmentExpression

   10 AssignmentExpression: id opassgnleft Expr1main
   11                     | Expr1main opassgnright id

   12 id: ID

   13 num: NUM

   14 Expr1main: Expr1
   15          | STRING
   16          | VECTOR

   17 Expr1: Expr2

   18 Expr2: Expr2 '+' Expr3
   19      | Expr2 '-' Expr3
   20      | Expr3

   21 Expr3: Expr3 '*' Expr4
   22      | Expr3 '/' Expr4
   23      | Expr4

   24 Expr4: ID
   25      | NUM
   26      | '(' Expr1 ')'

   27 opassgnleft: '='
   28            | LA
   29            | LLA

   30 opassgnright: RA
   31             | RRA

   32 FlowSt: BREAK NL
   33       | NEXT NL

   34 display: PRINT '(' printitems ')'

   35 printitems: Expr1
   36           | VECTOR
   37           | STRING
   38           | %empty

   39 CompoundStatement: if_loop NL
   40                  | while_loop NL
   41                  | for_loop NL
   42                  | repeat_loop NL

   43 if_loop: LOOP_IF '(' condition ')' NL '{' suite '}'
   44        | LOOP_IF '(' condition ')' NL '{' suite '}' elseif_loop

   45 elseif_loop: LOOP_ELSE LOOP_IF '(' condition ')' '{' suite '}' elseif_loop
   46            | else_loop

   47 else_loop: LOOP_ELSE '{' suite '}'
   48          | %empty

   49 while_loop: LOOP_WHILE '(' condition ')' NL '{' suite '}'

   50 for_loop: LOOP_FOR '(' cdn ')' NL '{' suite '}'

   51 cdn: id IN sequence

   52 repeat_loop: LOOP_REPEAT '{' suite '}'

   53 suite: NL Statement

   54 condition: condition '|' subcond1
   55          | subcond1

   56 subcond1: subcond1 '&' subcond2
   57         | subcond2

   58 subcond2: RelationalExpression

   59 RelationalExpression: id
   60                     | NUM
   61                     | RelationalExpression OPREL Expr1

   62 sequence: SEQ '(' startendind ')'
   63         | id

   64 startendind: jumpsize id
   65            | num ',' num
   66            | num ':' num

   67 jumpsize: num ',' num ',' FROM '=' num


Terminals, with rules where they appear

$end (0) 0
'&' (38) 56
'(' (40) 26 34 43 44 45 49 50 62
')' (41) 26 34 43 44 45 49 50 62
'*' (42) 21
'+' (43) 18
',' (44) 65 67
'-' (45) 19
'/' (47) 22
':' (58) 66
'=' (61) 27 67
'{' (123) 43 44 45 47 49 50 52
'|' (124) 54
'}' (125) 43 44 45 47 49 50 52
error (256)
STRING (258) 15 37
ID (259) 12 24
NUM (260) 13 25 60
VECTOR (261) 16 36
LOOP_WHILE (262) 49
LOOP_FOR (263) 50
LOOP_IF (264) 43 44 45
LOOP_ELSE (265) 45 47
LOOP_REPEAT (266) 52
IN (267) 51
SEQ (268) 62
FROM (269) 67
BREAK (270) 32
NEXT (271) 33
PRINT (272) 34
LLA (273) 29
LA (274) 28
RA (275) 30
RRA (276) 31
OPREL (277) 61
NL (278) 5 32 33 39 40 41 42 43 44 49 50 53
END_OF_FILE (279) 1


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
ROOT (39)
    on left: 1, on right: 0
Statement (40)
    on left: 2 3 4, on right: 1 2 3 53
SimpleStatement (41)
    on left: 5, on right: 2
SmallStatement (42)
    on left: 6 7 8, on right: 5
Expression (43)
    on left: 9, on right: 6
AssignmentExpression (44)
    on left: 10 11, on right: 9
id (45)
    on left: 12, on right: 10 11 51 59 63 64
num (46)
    on left: 13, on right: 65 66 67
Expr1main (47)
    on left: 14 15 16, on right: 10 11
Expr1 (48)
    on left: 17, on right: 14 26 35 61
Expr2 (49)
    on left: 18 19 20, on right: 17 18 19
Expr3 (50)
    on left: 21 22 23, on right: 18 19 20 21 22
Expr4 (51)
    on left: 24 25 26, on right: 21 22 23
opassgnleft (52)
    on left: 27 28 29, on right: 10
opassgnright (53)
    on left: 30 31, on right: 11
FlowSt (54)
    on left: 32 33, on right: 7
display (55)
    on left: 34, on right: 8
printitems (56)
    on left: 35 36 37 38, on right: 34
CompoundStatement (57)
    on left: 39 40 41 42, on right: 3
if_loop (58)
    on left: 43 44, on right: 39
elseif_loop (59)
    on left: 45 46, on right: 44 45
else_loop (60)
    on left: 47 48, on right: 46
while_loop (61)
    on left: 49, on right: 40
for_loop (62)
    on left: 50, on right: 41
cdn (63)
    on left: 51, on right: 50
repeat_loop (64)
    on left: 52, on right: 42
suite (65)
    on left: 53, on right: 43 44 45 47 49 50 52
condition (66)
    on left: 54 55, on right: 43 44 45 49 54
subcond1 (67)
    on left: 56 57, on right: 54 55 56
subcond2 (68)
    on left: 58, on right: 56 57
RelationalExpression (69)
    on left: 59 60 61, on right: 58 61
sequence (70)
    on left: 62 63, on right: 51
startendind (71)
    on left: 64 65 66, on right: 62
jumpsize (72)
    on left: 67, on right: 64


State 0

    0 $accept: . ROOT $end

    STRING       shift, and go to state 1
    ID           shift, and go to state 2
    NUM          shift, and go to state 3
    VECTOR       shift, and go to state 4
    LOOP_WHILE   shift, and go to state 5
    LOOP_FOR     shift, and go to state 6
    LOOP_IF      shift, and go to state 7
    LOOP_REPEAT  shift, and go to state 8
    BREAK        shift, and go to state 9
    NEXT         shift, and go to state 10
    PRINT        shift, and go to state 11
    '('          shift, and go to state 12

    $default  reduce using rule 4 (Statement)

    ROOT                  go to state 13
    Statement             go to state 14
    SimpleStatement       go to state 15
    SmallStatement        go to state 16
    Expression            go to state 17
    AssignmentExpression  go to state 18
    id                    go to state 19
    Expr1main             go to state 20
    Expr1                 go to state 21
    Expr2                 go to state 22
    Expr3                 go to state 23
    Expr4                 go to state 24
    FlowSt                go to state 25
    display               go to state 26
    CompoundStatement     go to state 27
    if_loop               go to state 28
    while_loop            go to state 29
    for_loop              go to state 30
    repeat_loop           go to state 31


State 1

   15 Expr1main: STRING .

    $default  reduce using rule 15 (Expr1main)


State 2

   12 id: ID .
   24 Expr4: ID .

    LLA       reduce using rule 12 (id)
    LA        reduce using rule 12 (id)
    '='       reduce using rule 12 (id)
    $default  reduce using rule 24 (Expr4)


State 3

   25 Expr4: NUM .

    $default  reduce using rule 25 (Expr4)


State 4

   16 Expr1main: VECTOR .

    $default  reduce using rule 16 (Expr1main)


State 5

   49 while_loop: LOOP_WHILE . '(' condition ')' NL '{' suite '}'

    '('  shift, and go to state 32


State 6

   50 for_loop: LOOP_FOR . '(' cdn ')' NL '{' suite '}'

    '('  shift, and go to state 33


State 7

   43 if_loop: LOOP_IF . '(' condition ')' NL '{' suite '}'
   44        | LOOP_IF . '(' condition ')' NL '{' suite '}' elseif_loop

    '('  shift, and go to state 34


State 8

   52 repeat_loop: LOOP_REPEAT . '{' suite '}'

    '{'  shift, and go to state 35


State 9

   32 FlowSt: BREAK . NL

    NL  shift, and go to state 36


State 10

   33 FlowSt: NEXT . NL

    NL  shift, and go to state 37


State 11

   34 display: PRINT . '(' printitems ')'

    '('  shift, and go to state 38


State 12

   26 Expr4: '(' . Expr1 ')'

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr1  go to state 40
    Expr2  go to state 22
    Expr3  go to state 23
    Expr4  go to state 24


State 13

    0 $accept: ROOT . $end

    $end  shift, and go to state 41


State 14

    1 ROOT: Statement . END_OF_FILE

    END_OF_FILE  shift, and go to state 42


State 15

    2 Statement: SimpleStatement . Statement

    STRING       shift, and go to state 1
    ID           shift, and go to state 2
    NUM          shift, and go to state 3
    VECTOR       shift, and go to state 4
    LOOP_WHILE   shift, and go to state 5
    LOOP_FOR     shift, and go to state 6
    LOOP_IF      shift, and go to state 7
    LOOP_REPEAT  shift, and go to state 8
    BREAK        shift, and go to state 9
    NEXT         shift, and go to state 10
    PRINT        shift, and go to state 11
    '('          shift, and go to state 12

    $default  reduce using rule 4 (Statement)

    Statement             go to state 43
    SimpleStatement       go to state 15
    SmallStatement        go to state 16
    Expression            go to state 17
    AssignmentExpression  go to state 18
    id                    go to state 19
    Expr1main             go to state 20
    Expr1                 go to state 21
    Expr2                 go to state 22
    Expr3                 go to state 23
    Expr4                 go to state 24
    FlowSt                go to state 25
    display               go to state 26
    CompoundStatement     go to state 27
    if_loop               go to state 28
    while_loop            go to state 29
    for_loop              go to state 30
    repeat_loop           go to state 31


State 16

    5 SimpleStatement: SmallStatement . NL

    NL  shift, and go to state 44


State 17

    6 SmallStatement: Expression .

    $default  reduce using rule 6 (SmallStatement)


State 18

    9 Expression: AssignmentExpression .

    $default  reduce using rule 9 (Expression)


State 19

   10 AssignmentExpression: id . opassgnleft Expr1main

    LLA  shift, and go to state 45
    LA   shift, and go to state 46
    '='  shift, and go to state 47

    opassgnleft  go to state 48


State 20

   11 AssignmentExpression: Expr1main . opassgnright id

    RA   shift, and go to state 49
    RRA  shift, and go to state 50

    opassgnright  go to state 51


State 21

   14 Expr1main: Expr1 .

    $default  reduce using rule 14 (Expr1main)


State 22

   17 Expr1: Expr2 .
   18 Expr2: Expr2 . '+' Expr3
   19      | Expr2 . '-' Expr3

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53

    $default  reduce using rule 17 (Expr1)


State 23

   20 Expr2: Expr3 .
   21 Expr3: Expr3 . '*' Expr4
   22      | Expr3 . '/' Expr4

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 20 (Expr2)


State 24

   23 Expr3: Expr4 .

    $default  reduce using rule 23 (Expr3)


State 25

    7 SmallStatement: FlowSt .

    $default  reduce using rule 7 (SmallStatement)


State 26

    8 SmallStatement: display .

    $default  reduce using rule 8 (SmallStatement)


State 27

    3 Statement: CompoundStatement . Statement

    STRING       shift, and go to state 1
    ID           shift, and go to state 2
    NUM          shift, and go to state 3
    VECTOR       shift, and go to state 4
    LOOP_WHILE   shift, and go to state 5
    LOOP_FOR     shift, and go to state 6
    LOOP_IF      shift, and go to state 7
    LOOP_REPEAT  shift, and go to state 8
    BREAK        shift, and go to state 9
    NEXT         shift, and go to state 10
    PRINT        shift, and go to state 11
    '('          shift, and go to state 12

    $default  reduce using rule 4 (Statement)

    Statement             go to state 56
    SimpleStatement       go to state 15
    SmallStatement        go to state 16
    Expression            go to state 17
    AssignmentExpression  go to state 18
    id                    go to state 19
    Expr1main             go to state 20
    Expr1                 go to state 21
    Expr2                 go to state 22
    Expr3                 go to state 23
    Expr4                 go to state 24
    FlowSt                go to state 25
    display               go to state 26
    CompoundStatement     go to state 27
    if_loop               go to state 28
    while_loop            go to state 29
    for_loop              go to state 30
    repeat_loop           go to state 31


State 28

   39 CompoundStatement: if_loop . NL

    NL  shift, and go to state 57


State 29

   40 CompoundStatement: while_loop . NL

    NL  shift, and go to state 58


State 30

   41 CompoundStatement: for_loop . NL

    NL  shift, and go to state 59


State 31

   42 CompoundStatement: repeat_loop . NL

    NL  shift, and go to state 60


State 32

   49 while_loop: LOOP_WHILE '(' . condition ')' NL '{' suite '}'

    ID   shift, and go to state 61
    NUM  shift, and go to state 62

    id                    go to state 63
    condition             go to state 64
    subcond1              go to state 65
    subcond2              go to state 66
    RelationalExpression  go to state 67


State 33

   50 for_loop: LOOP_FOR '(' . cdn ')' NL '{' suite '}'

    ID  shift, and go to state 61

    id   go to state 68
    cdn  go to state 69


State 34

   43 if_loop: LOOP_IF '(' . condition ')' NL '{' suite '}'
   44        | LOOP_IF '(' . condition ')' NL '{' suite '}' elseif_loop

    ID   shift, and go to state 61
    NUM  shift, and go to state 62

    id                    go to state 63
    condition             go to state 70
    subcond1              go to state 65
    subcond2              go to state 66
    RelationalExpression  go to state 67


State 35

   52 repeat_loop: LOOP_REPEAT '{' . suite '}'

    NL  shift, and go to state 71

    suite  go to state 72


State 36

   32 FlowSt: BREAK NL .

    $default  reduce using rule 32 (FlowSt)


State 37

   33 FlowSt: NEXT NL .

    $default  reduce using rule 33 (FlowSt)


State 38

   34 display: PRINT '(' . printitems ')'

    STRING  shift, and go to state 73
    ID      shift, and go to state 39
    NUM     shift, and go to state 3
    VECTOR  shift, and go to state 74
    '('     shift, and go to state 12

    $default  reduce using rule 38 (printitems)

    Expr1       go to state 75
    Expr2       go to state 22
    Expr3       go to state 23
    Expr4       go to state 24
    printitems  go to state 76


State 39

   24 Expr4: ID .

    $default  reduce using rule 24 (Expr4)


State 40

   26 Expr4: '(' Expr1 . ')'

    ')'  shift, and go to state 77


State 41

    0 $accept: ROOT $end .

    $default  accept


State 42

    1 ROOT: Statement END_OF_FILE .

    $default  reduce using rule 1 (ROOT)


State 43

    2 Statement: SimpleStatement Statement .

    $default  reduce using rule 2 (Statement)


State 44

    5 SimpleStatement: SmallStatement NL .

    $default  reduce using rule 5 (SimpleStatement)


State 45

   29 opassgnleft: LLA .

    $default  reduce using rule 29 (opassgnleft)


State 46

   28 opassgnleft: LA .

    $default  reduce using rule 28 (opassgnleft)


State 47

   27 opassgnleft: '=' .

    $default  reduce using rule 27 (opassgnleft)


State 48

   10 AssignmentExpression: id opassgnleft . Expr1main

    STRING  shift, and go to state 1
    ID      shift, and go to state 39
    NUM     shift, and go to state 3
    VECTOR  shift, and go to state 4
    '('     shift, and go to state 12

    Expr1main  go to state 78
    Expr1      go to state 21
    Expr2      go to state 22
    Expr3      go to state 23
    Expr4      go to state 24


State 49

   30 opassgnright: RA .

    $default  reduce using rule 30 (opassgnright)


State 50

   31 opassgnright: RRA .

    $default  reduce using rule 31 (opassgnright)


State 51

   11 AssignmentExpression: Expr1main opassgnright . id

    ID  shift, and go to state 61

    id  go to state 79


State 52

   18 Expr2: Expr2 '+' . Expr3

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr3  go to state 80
    Expr4  go to state 24


State 53

   19 Expr2: Expr2 '-' . Expr3

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr3  go to state 81
    Expr4  go to state 24


State 54

   21 Expr3: Expr3 '*' . Expr4

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr4  go to state 82


State 55

   22 Expr3: Expr3 '/' . Expr4

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr4  go to state 83


State 56

    3 Statement: CompoundStatement Statement .

    $default  reduce using rule 3 (Statement)


State 57

   39 CompoundStatement: if_loop NL .

    $default  reduce using rule 39 (CompoundStatement)


State 58

   40 CompoundStatement: while_loop NL .

    $default  reduce using rule 40 (CompoundStatement)


State 59

   41 CompoundStatement: for_loop NL .

    $default  reduce using rule 41 (CompoundStatement)


State 60

   42 CompoundStatement: repeat_loop NL .

    $default  reduce using rule 42 (CompoundStatement)


State 61

   12 id: ID .

    $default  reduce using rule 12 (id)


State 62

   60 RelationalExpression: NUM .

    $default  reduce using rule 60 (RelationalExpression)


State 63

   59 RelationalExpression: id .

    $default  reduce using rule 59 (RelationalExpression)


State 64

   49 while_loop: LOOP_WHILE '(' condition . ')' NL '{' suite '}'
   54 condition: condition . '|' subcond1

    ')'  shift, and go to state 84
    '|'  shift, and go to state 85


State 65

   55 condition: subcond1 .
   56 subcond1: subcond1 . '&' subcond2

    '&'  shift, and go to state 86

    $default  reduce using rule 55 (condition)


State 66

   57 subcond1: subcond2 .

    $default  reduce using rule 57 (subcond1)


State 67

   58 subcond2: RelationalExpression .
   61 RelationalExpression: RelationalExpression . OPREL Expr1

    OPREL  shift, and go to state 87

    $default  reduce using rule 58 (subcond2)


State 68

   51 cdn: id . IN sequence

    IN  shift, and go to state 88


State 69

   50 for_loop: LOOP_FOR '(' cdn . ')' NL '{' suite '}'

    ')'  shift, and go to state 89


State 70

   43 if_loop: LOOP_IF '(' condition . ')' NL '{' suite '}'
   44        | LOOP_IF '(' condition . ')' NL '{' suite '}' elseif_loop
   54 condition: condition . '|' subcond1

    ')'  shift, and go to state 90
    '|'  shift, and go to state 85


State 71

   53 suite: NL . Statement

    STRING       shift, and go to state 1
    ID           shift, and go to state 2
    NUM          shift, and go to state 3
    VECTOR       shift, and go to state 4
    LOOP_WHILE   shift, and go to state 5
    LOOP_FOR     shift, and go to state 6
    LOOP_IF      shift, and go to state 7
    LOOP_REPEAT  shift, and go to state 8
    BREAK        shift, and go to state 9
    NEXT         shift, and go to state 10
    PRINT        shift, and go to state 11
    '('          shift, and go to state 12

    $default  reduce using rule 4 (Statement)

    Statement             go to state 91
    SimpleStatement       go to state 15
    SmallStatement        go to state 16
    Expression            go to state 17
    AssignmentExpression  go to state 18
    id                    go to state 19
    Expr1main             go to state 20
    Expr1                 go to state 21
    Expr2                 go to state 22
    Expr3                 go to state 23
    Expr4                 go to state 24
    FlowSt                go to state 25
    display               go to state 26
    CompoundStatement     go to state 27
    if_loop               go to state 28
    while_loop            go to state 29
    for_loop              go to state 30
    repeat_loop           go to state 31


State 72

   52 repeat_loop: LOOP_REPEAT '{' suite . '}'

    '}'  shift, and go to state 92


State 73

   37 printitems: STRING .

    $default  reduce using rule 37 (printitems)


State 74

   36 printitems: VECTOR .

    $default  reduce using rule 36 (printitems)


State 75

   35 printitems: Expr1 .

    $default  reduce using rule 35 (printitems)


State 76

   34 display: PRINT '(' printitems . ')'

    ')'  shift, and go to state 93


State 77

   26 Expr4: '(' Expr1 ')' .

    $default  reduce using rule 26 (Expr4)


State 78

   10 AssignmentExpression: id opassgnleft Expr1main .

    $default  reduce using rule 10 (AssignmentExpression)


State 79

   11 AssignmentExpression: Expr1main opassgnright id .

    $default  reduce using rule 11 (AssignmentExpression)


State 80

   18 Expr2: Expr2 '+' Expr3 .
   21 Expr3: Expr3 . '*' Expr4
   22      | Expr3 . '/' Expr4

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 18 (Expr2)


State 81

   19 Expr2: Expr2 '-' Expr3 .
   21 Expr3: Expr3 . '*' Expr4
   22      | Expr3 . '/' Expr4

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 19 (Expr2)


State 82

   21 Expr3: Expr3 '*' Expr4 .

    $default  reduce using rule 21 (Expr3)


State 83

   22 Expr3: Expr3 '/' Expr4 .

    $default  reduce using rule 22 (Expr3)


State 84

   49 while_loop: LOOP_WHILE '(' condition ')' . NL '{' suite '}'

    NL  shift, and go to state 94


State 85

   54 condition: condition '|' . subcond1

    ID   shift, and go to state 61
    NUM  shift, and go to state 62

    id                    go to state 63
    subcond1              go to state 95
    subcond2              go to state 66
    RelationalExpression  go to state 67


State 86

   56 subcond1: subcond1 '&' . subcond2

    ID   shift, and go to state 61
    NUM  shift, and go to state 62

    id                    go to state 63
    subcond2              go to state 96
    RelationalExpression  go to state 67


State 87

   61 RelationalExpression: RelationalExpression OPREL . Expr1

    ID   shift, and go to state 39
    NUM  shift, and go to state 3
    '('  shift, and go to state 12

    Expr1  go to state 97
    Expr2  go to state 22
    Expr3  go to state 23
    Expr4  go to state 24


State 88

   51 cdn: id IN . sequence

    ID   shift, and go to state 61
    SEQ  shift, and go to state 98

    id        go to state 99
    sequence  go to state 100


State 89

   50 for_loop: LOOP_FOR '(' cdn ')' . NL '{' suite '}'

    NL  shift, and go to state 101


State 90

   43 if_loop: LOOP_IF '(' condition ')' . NL '{' suite '}'
   44        | LOOP_IF '(' condition ')' . NL '{' suite '}' elseif_loop

    NL  shift, and go to state 102


State 91

   53 suite: NL Statement .

    $default  reduce using rule 53 (suite)


State 92

   52 repeat_loop: LOOP_REPEAT '{' suite '}' .

    $default  reduce using rule 52 (repeat_loop)


State 93

   34 display: PRINT '(' printitems ')' .

    $default  reduce using rule 34 (display)


State 94

   49 while_loop: LOOP_WHILE '(' condition ')' NL . '{' suite '}'

    '{'  shift, and go to state 103


State 95

   54 condition: condition '|' subcond1 .
   56 subcond1: subcond1 . '&' subcond2

    '&'  shift, and go to state 86

    $default  reduce using rule 54 (condition)


State 96

   56 subcond1: subcond1 '&' subcond2 .

    $default  reduce using rule 56 (subcond1)


State 97

   61 RelationalExpression: RelationalExpression OPREL Expr1 .

    $default  reduce using rule 61 (RelationalExpression)


State 98

   62 sequence: SEQ . '(' startendind ')'

    '('  shift, and go to state 104


State 99

   63 sequence: id .

    $default  reduce using rule 63 (sequence)


State 100

   51 cdn: id IN sequence .

    $default  reduce using rule 51 (cdn)


State 101

   50 for_loop: LOOP_FOR '(' cdn ')' NL . '{' suite '}'

    '{'  shift, and go to state 105


State 102

   43 if_loop: LOOP_IF '(' condition ')' NL . '{' suite '}'
   44        | LOOP_IF '(' condition ')' NL . '{' suite '}' elseif_loop

    '{'  shift, and go to state 106


State 103

   49 while_loop: LOOP_WHILE '(' condition ')' NL '{' . suite '}'

    NL  shift, and go to state 71

    suite  go to state 107


State 104

   62 sequence: SEQ '(' . startendind ')'

    NUM  shift, and go to state 108

    num          go to state 109
    startendind  go to state 110
    jumpsize     go to state 111


State 105

   50 for_loop: LOOP_FOR '(' cdn ')' NL '{' . suite '}'

    NL  shift, and go to state 71

    suite  go to state 112


State 106

   43 if_loop: LOOP_IF '(' condition ')' NL '{' . suite '}'
   44        | LOOP_IF '(' condition ')' NL '{' . suite '}' elseif_loop

    NL  shift, and go to state 71

    suite  go to state 113


State 107

   49 while_loop: LOOP_WHILE '(' condition ')' NL '{' suite . '}'

    '}'  shift, and go to state 114


State 108

   13 num: NUM .

    $default  reduce using rule 13 (num)


State 109

   65 startendind: num . ',' num
   66            | num . ':' num
   67 jumpsize: num . ',' num ',' FROM '=' num

    ','  shift, and go to state 115
    ':'  shift, and go to state 116


State 110

   62 sequence: SEQ '(' startendind . ')'

    ')'  shift, and go to state 117


State 111

   64 startendind: jumpsize . id

    ID  shift, and go to state 61

    id  go to state 118


State 112

   50 for_loop: LOOP_FOR '(' cdn ')' NL '{' suite . '}'

    '}'  shift, and go to state 119


State 113

   43 if_loop: LOOP_IF '(' condition ')' NL '{' suite . '}'
   44        | LOOP_IF '(' condition ')' NL '{' suite . '}' elseif_loop

    '}'  shift, and go to state 120


State 114

   49 while_loop: LOOP_WHILE '(' condition ')' NL '{' suite '}' .

    $default  reduce using rule 49 (while_loop)


State 115

   65 startendind: num ',' . num
   67 jumpsize: num ',' . num ',' FROM '=' num

    NUM  shift, and go to state 108

    num  go to state 121


State 116

   66 startendind: num ':' . num

    NUM  shift, and go to state 108

    num  go to state 122


State 117

   62 sequence: SEQ '(' startendind ')' .

    $default  reduce using rule 62 (sequence)


State 118
